<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>twist_to_ackermann</name>
  <version>0.1.0</version>
  <description>Convert Twist messages to AckermannDriveStamped ones</description>
  <maintainer email="carma@dot.gov">CARMA Support</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>ackermann_msgs</build_depend>
  <build_depend>ament_cmake_auto</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rclcpp</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
